Fixed pages layout issue

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -519,7 +519,7 @@ section {
   h2 {
     font-weight: 500;
     font-size: 29px;
-    margin: 40px 0
+    margin: 40px 0;
   }
   h3 {
     font-size: 23px;
@@ -539,6 +539,7 @@ section {
       font-weight: 900;
       font-size: 29px;
       margin: 0;
+      padding-top: 15px;
     }
   }
 
